Ez-918 layout builder page issues on theming like spacing, buttuns etc

--- a/pattern-lab/source/_patterns/02-organisms/00-global/00-global.scss
+++ b/pattern-lab/source/_patterns/02-organisms/00-global/00-global.scss
@@ -36,4 +36,7 @@ section {
     margin-left: 5px;
     font-size: $min-font-size;
   }
+  section.block{
+    margin-bottom: 0;
+  }
 }
